[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gohighlevel-api-client"
version = "1.0.0-beta"
description = "GoHighLevel Python SDK - Official API client for GoHighLevel platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "HighLevel", email = "marketplace@gohighlevel.com"}
]
maintainers = [
    {name = "HighLevel", email = "marketplace@gohighlevel.com"}
]
keywords = [
    "gohighlevel",
    "api",
    "sdk",
    "client",
    "crm",
    "marketing",
    "automation"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.24.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0; python_version<'3.11'",
    "pymongo>=4.0.0",
    "cryptography>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "build>=0.10.0",
    "twine>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/GoHighLevel/highlevel-api-python"
Documentation = "https://marketplace.gohighlevel.com/docs/"
Repository = "https://github.com/GoHighLevel/highlevel-api-python"
"Bug Tracker" = "https://github.com/GoHighLevel/highlevel-api-python/issues"
Changelog = "https://github.com/GoHighLevel/highlevel-api-python/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
highlevel = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["highlevel"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]
